--- a/video.html
+++ b/video.html
@@ -20,11 +20,8 @@
  </center>
  <div class="video">
  	<video controls autoplay muted loop>
-      <source src="video/sumika.mp4" type="video/mp4">
+      <source src="video/CreepyNuts.mp4" type="video/mp4">
  </div>
- 
- 
- 
  <div class="footer">&copy Copyright 2024</div>
 </body>
 </html>
